overlaping items fix

--- a/family.css
+++ b/family.css
@@ -1,4 +1,4 @@
-h1 {
+h1, .index {
     color: black;
     text-align: center;
     padding: 20px;
@@ -107,6 +107,7 @@ button:hover {
         font-size: 14px;
         padding: 10px;
         width: 90%;
+        max-height: 60%;
     }
 
     #pictures {
